--- a/index.html
+++ b/index.html
@@ -285,8 +285,8 @@
     content="A fórmula de Secatrol faz você emagrecer de forma definitiva. Pois não foca somente na perda de peso, e sim na queima da pura gordura do corpo.">
   <meta name="keywords" content="cupom, desconto, secatrol">
 
-  <link rel="alternate" href="https://secatrol.desconto.click" hreflang="pt-br" />
-  <link rel=“canonical” href=“https://secatrol.desconto.click” />
+  <link rel="alternate" href="https://secatrol.aprovamos.online" hreflang="pt-br" />
+  <link rel=“canonical” href=“https://secatrol.aprovamos.online” />
 
 
   <!-- // INICIO SNIPPET PRODUTO // -->
@@ -299,7 +299,7 @@
     "@type": "Product",
     "name": "Secatrol",
     "image": [
-      "https://images.desconto.click/secatrol.webp"
+      "https://images.aprovamos.online/secatrol.webp"
      ],
     "description": "A fórmula de Secatrol faz você emagrecer de forma definitiva. Pois não foca somente na perda de peso, e sim na queima da pura gordura do corpo.",
     "sku": "",
@@ -327,7 +327,7 @@
     },
     "offers": {
       "@type": "Offer",
-      "url": "https://secatrol.desconto.click/",
+      "url": "https://secatrol.aprovamos.online/",
       "priceCurrency": "BRL",
       "price": "99.00",
       "priceValidUntil": "2026-12-25",
@@ -384,7 +384,7 @@
 
     <div class="containerzao">
       <div class="imagem"> <a href="usar-o-cupom.html" alt="OFERTA" title="COMPRE BARATO"><img
-            src="https://images.desconto.click/secatrol.webp" alt="Secatrol" width="183" height="270"></a></div>
+            src="https://images.aprovamos.online/secatrol.webp" alt="Secatrol" width="183" height="270"></a></div>
 
       <div class="descricao">
         <p>A fórmula de Secatrol faz você emagrecer de forma definitiva. Pois não foca somente na perda de peso, e sim na queima da pura gordura do corpo. A camada superficial de gordura, e a água do corpo, são as primeiras a irem embora quando se começa a emagrecer, mas voltam rapidamente logo em seguida. </p>
@@ -819,14 +819,14 @@
 
   <footer class="container-footer">
     <div class="text-rodape">
-      <div class="a"><a href="https://desconto.click/termos.html" class="text-rodape">Termos de Uso</a> | <a
-          href="https://desconto.click/privacidade.html" class="text-rodape">Política de Privacidade</a> | <a
-          href="https://desconto.click/" class="text-rodape">Mais Cupons</a>
+      <div class="a"><a href="https://aprovamos.online/termos.html" class="text-rodape">Termos de Uso</a> | <a
+          href="https://aprovamos.online/privacidade.html" class="text-rodape">Política de Privacidade</a> | <a
+          href="https://aprovamos.online/" class="text-rodape">Mais Cupons</a>
         </div>
     </div>
     <div class="container-footer">
       <div class="text-rodape">
-        <h4> Desconto.Click © Todos os direitos reservados.</h4>
+        <h4> aprovamos.online © Todos os direitos reservados.</h4>
       </div>
     </div>
   </footer>
